tests/integration/snapshots/integration__conformance__n_structure_uescaped_lf_before_string.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdout ---
[\u000A""]
stderr ---
error: unexpected character `\`. expected start of a json value
 --> stdin:1:2
  |
1 | [\u000A""]
  |  ^
